# soop

soop/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  configure  configure.in  soop.kdevelop
soop/autom4te.cache/: output.0  traces.0
soop/debug/: Makefile  config.h  config.status  libtool
soop/debug/libsclient/: Makefile
soop/debug/libsclient/.deps/: basic_com.Po  geometry.Po  netif.Po  one_flag.Po  position.Po  scan_state.Po  scan_visual.Po  sensor_info.Po  triDistance.Po  triPoint.Po  two_flags.Po
soop/debug/src/: Makefile
soop/debug/src/.deps/: soop.Po
soop/libsclient/: Makefile.am  Makefile.in  basic_com.c  geometry.c  geometry.h  libsclient.h  netif.c  one_flag.c  position.c  position.h  scan_state.c  scan_visual.c  sensor_info.c  triDistance.c  triPoint.c  two_flags.c
soop/src/: Makefile.am  Makefile.in  soop.c
soop/templates/: c
