INCLUDES = -I$(top_srcdir)/libsclient
METASOURCES = AUTO
lib_LIBRARIES =  libsclient.a
libsclient_a_SOURCES =  basic_com.c geometry.c netif.c one_flag.c position.c scan_state.c scan_visual.c sensor_info.c triDistance.c triPoint.c two_flags.c geometry.h libsclient.h position.h
libsclient_a_LIBADD = -lm
